# ristek-assignment

./: Procfile  README.md
backend/: .env.example  .gitignore  Procfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 9da2e52e975c_init_db.py  a7c485e52d25_add_created_field.py
backend/server/: app.py  models.py  plugins.py  request_models.py  responses.py
backend/server/helper/: database.py  settings.py
backend/server/routes/: auth.py  blog.py  comment.py
frontend/: package.json  tailwind.config.js  tsconfig.json
frontend/components/context/: UserContext.tsx
frontend/components/elements/: button.tsx  icons.tsx  index.tsx  loader.tsx  modal.tsx  project.tsx
frontend/components/elements/Navbar/: DesktopNavbar.tsx  MobileNavbar.tsx  index.tsx
frontend/components/hooks/: useBreakpoint.ts
frontend/components/modules/BlogPage/: Post.module.css  Post.tsx  PreviewBox.tsx  StateMessage.tsx  SubmissionForm.tsx  interface.ts
frontend/components/modules/BlogPage/Comments/: CommentBox.tsx  CommentForm.tsx  CommentSection.tsx  index.tsx
frontend/components/modules/LoginPage/: LoginBox.tsx  RegisterBox.tsx
frontend/components/modules/MainPage/about/: index.tsx
frontend/components/modules/MainPage/header/: index.tsx
frontend/components/modules/MainPage/links/: index.tsx
frontend/components/utils/: axios.ts  response.ts
frontend/pages/: _app.tsx  _document.tsx  auth.tsx  index.tsx
frontend/pages/blog/: [postId].tsx  create.tsx  index.tsx
frontend/styles/: globals.css
frontend/types/: responses.ts
(+3 files in other folders)
