[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Rendy Arya Kemal <renrror@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.0"
ormar = {extras = ["postgresql"], version = "^0.10.25"}
alembic = "^1.7.6"
fastapi-login = "^1.7.3"
passlib = "^1.7.4"
uvicorn = "^0.17.6"
aiosqlite = "^0.17.0"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
flake8 = "^4.0.1"
black = "^22.1.0"
types-passlib = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
